[#New] Support ordering of construct queries within specific apply construct modules